--- a/Final Paper.Rmd
+++ b/Final Paper.Rmd
@@ -28,7 +28,18 @@ library(mlogit)
 knitr::opts_chunk$set(echo = TRUE)
 movie_data <- read_excel("moviedata.xlsx")
 
-head(movie_data)
+movie_data$D <- ifelse(movie_data$week == "51"|movie_data$week =="52", 1,0)
+
+# Subset the data to look at only the weeks we are interested in
+movie_data <- movie_data %>%
+  filter(week == "51"|week =="52"|week =="50"|week =="49"|week =="48"| week =="47"| week=="1"| week=="2"| week=="3"| week=="4")
+
+
+ols_model <- lm(D ~ cum_revenue, data = movie_data)
+
+summary(ols_model)
+
+```
 ```
 
 
