--- a/Final Paper.Rmd
+++ b/Final Paper.Rmd
@@ -2,7 +2,7 @@
 title: "Final Paper"
 author: "Juan Sanchez, Jared Picco"
 date: "2023-12-07"
-output: html_document
+output: pdf_document
 ---
 
 ```{r setup, include=FALSE}
@@ -22,37 +22,130 @@ library(foreign)
 library(Hmisc)
 library(MatchIt)
 library(mlogit)
+library(haven)
+library(estimatr)
 ```
 
-```{r setup, include=FALSE, echo=FALSE}
-knitr::opts_chunk$set(echo = TRUE)
+
+# Changed the week variable to tom_week_id because the week of year is adjusted so holidays fall on the same week.
+```{r setup, echo=FALSE}
+
+options(scipen = 999)
 movie_data <- read_excel("moviedata.xlsx")
 
-movie_data$D <- ifelse(movie_data$week == "51"|movie_data$week =="52", 1,0)
+# Define the treatment
+movie_data$D <- ifelse(movie_data$tom_week_id == "54"|movie_data$tom_week_id =="55", 1,0)
 
-# Subset the data to look at only the weeks we are interested in subsetting out the outliers
+# Look at the summary stats of the revenue column
+summary(movie_data$revenue)
+
+# Subset the data to look at only the weeks we are interested in and remove rows with NA in the budget
 movie_data <- movie_data %>%
-  filter(week == "51"|week =="52"|week =="50"|week =="49", revenue <= 	
-296602355)
+  filter(tom_week_id == "55"|tom_week_id =="54"|tom_week_id =="53"|tom_week_id =="52"|tom_week_id =="51"  & budget != NA & revenue != NA)
 
+# We are left with 3123 observations
 
-# Plot the data and fit the model seperately fit lines for weeks 49 and 50 and 51 and 52
-ols_model <- lm(log(revenue) ~ I(week_num^2) + market_share + week, data = movie_data)
+# Run an OLS regression with the log of revenue/budget on week released and the treatment
+ols_model <- lm_robust(log(revenue/budget) ~  week + D, data = movie_data)
+
+#iv_reg <- ivreg(revenue ~ budget | week, data = subset_data2)
+
+#summary(iv_reg)
 
 summary(ols_model)
 
+# We see that the treatment variable is statistically significant when running a linear regression with HC2 standard errors
 
-ggplot(movie_data, aes(x = week, y = log(revenue))) +
+exp(coef(ols_model))
+
+# After exponentiating the variable from log, we see that the 
+
+
+
+
+ggplot(movie_data, aes(x = tom_week_id, y = log(revenue/budget))) +
   geom_point() +
-  #geom_smooth(method = "lm", formula = y ~ x, se = FALSE, color = "red") +
-  geom_smooth(method = "lm", formula = y ~ x, se = FALSE, color = "blue", data = subset(movie_data, week == "49"|week =="50")) +
-  geom_smooth(method = "lm", formula = y ~ x, se = FALSE, color = "green", data = subset(movie_data, week == "51"|week =="52")) +
-  labs(title = "Revenue by Week", x = "Week", y = "Revenue")
-
+  geom_smooth(method = "lm", formula = y ~ x, se = FALSE, color = "red") +
+  geom_smooth(method = "lm", formula = y ~ x, se = FALSE, color = "blue", data = subset(movie_data, tom_week_id == "53"|tom_week_id == "52"|tom_week_id == "51")) +
+  geom_smooth(method = "lm", formula = y ~ x, se = FALSE, color = "green", data = subset(movie_data, tom_week_id == "55"|tom_week_id == "54")) +
+  labs(title = "Revenue by Week", x = "tom_week_id", y = "log(Revenue/Budget)")
 
 
 
 ```
+
+Look at min max median and mean
+```{r setup}
+summary(movie_data$revenue)
+
+
+```
+
+# Data using a cutoff at the mean revenue
+```{r setup}
+
+subset_data <- movie_data %>%
+  filter(revenue >= 1753847)
+
+
+subset_data <- subset_data %>%
+  filter(week == "51"|week =="52"|week =="50"|week =="49")
+
+
+
+lm1 <- lm_robust(log(revenue/budget) ~ week + D, data = subset_data)
+summary(lm1)
+
+
+ggplot(subset_data, aes(x = week, y = log(revenue))) +
+  geom_point(color = "blue") +  # Scatter plot
+  #geom_smooth(method = "lm", se = FALSE, color = "red") +  # Line of best fit
+  geom_smooth(method = "lm", formula = y ~ x, se = FALSE, color = "purple", data = subset(subset_data, week == "49"|week =="50")) +
+  geom_smooth(method = "lm", formula = y ~ x, se = FALSE, color = "green", data = subset(subset_data, week == "51"|week =="52")) +
+  labs(title = "Scatter Plot with Line of Best Fit",
+       x = "Week",
+       y = "Revenue ($)"
+       )
+
+summary(subset_data$revenue)
+
+#Important
+ggplot(movie_data, aes(x = week, y = revenue)) +
+  geom_bar(stat = "identity", fill = "skyblue", color = "black", alpha = 0.7) +
+  labs(title = "Bar Plot of Revenue by Week",
+       x = "Week",
+       y = "Revenue ($)")
+
+```
+
+``` {r setup}
+
+subset_data2 <- movie_data %>%
+  filter(revenue >= 30000000)
+
+
+subset_data2 <- subset_data2 %>%
+  filter(week == "51"|week =="52"|week =="50"|week =="49")
+
+
+
+lm1 <- lm_robust(revenue ~ week, data = subset_data)
+summary(lm1)
+
+
+ggplot(subset_data2, aes(x = week, y = log(revenue/budget))) +
+  geom_point(color = "blue") +  # Scatter plot
+  geom_smooth(method = "lm", se = FALSE, color = "red") +  # Line of best fit
+  geom_smooth(method = "lm", formula = y ~ x, se = FALSE, color = "purple", data = subset(subset_data2, week == "49"|week =="50")) +
+  geom_smooth(method = "lm", formula = y ~ x, se = FALSE, color = "green", data = subset(subset_data2, week == "51"|week =="52")) +
+  labs(title = "Scatter Plot with Line of Best Fit",
+       x = "Week",
+       y = "Revenue ($)"
+       )
+
+
+```
+
 
 
 
