--- a/working.Rmd
+++ b/working.Rmd
@@ -288,6 +288,8 @@ ols_model1_HR <- lm_robust(revenue ~  tom_week_id, data = data_high_rev)
 ols_model1_NR <- lm_robust(revenue ~  tom_week_id, data = data_normal_rev)
 summary(ols_model1_HR)
 summary(ols_model1_NR)
+cor(revenue, pop)
+cor(revenue, budget)
 
 ggplot(data_high_rev, aes(x = tom_week_id, y = revenue)) +
   geom_point() +
@@ -295,7 +297,7 @@ ggplot(data_high_rev, aes(x = tom_week_id, y = revenue)) +
   geom_smooth(method = "lm", formula = y ~ x, se = FALSE, color = "red", data = subset(data_high_rev, tom_week_id == "53"|tom_week_id == "54")) +
   geom_smooth(method = "lm", formula = y ~ x, se = FALSE, color = "blue", data = subset(data_high_rev, tom_week_id == "52"|tom_week_id == "53")) +
   geom_smooth(method = "lm", formula = y ~ x, se = FALSE, color = "green",data = subset(data_high_rev, tom_week_id == "54"|tom_week_id == "55")) +
-  labs(title = "Revenue by Week (High Revenue Movies)", x = "tom_week_id", y = "Revenue")
+  labs(title = "Revenue by Week (High Revenue Movies) n = 55", x = "tom_week_id", y = "Revenue")
 
 ggplot(data_normal_rev, aes(x = tom_week_id, y = revenue)) +
   geom_point() +
@@ -303,7 +305,61 @@ ggplot(data_normal_rev, aes(x = tom_week_id, y = revenue)) +
   geom_smooth(method = "lm", formula = y ~ x, se = FALSE, color = "red", data = subset(data_normal_rev, tom_week_id == "53"|tom_week_id == "54")) +
   geom_smooth(method = "lm", formula = y ~ x, se = FALSE, color = "blue", data = subset(data_normal_rev, tom_week_id == "52"|tom_week_id == "53")) +
   geom_smooth(method = "lm", formula = y ~ x, se = FALSE, color = "green",data = subset(data_normal_rev, tom_week_id == "54"|tom_week_id == "55")) +
-  labs(title = "Revenue by Week (Normal Revenue Movies)", x = "tom_week_id", y = "Revenue")
+  labs(title = "Revenue by Week (Normal Revenue Movies) n = 4004", x = "tom_week_id", y = "Revenue")
 
 
 ```
+
+# RDD Model Specification
+
+```{r setup}
+# Define the treatment
+data_high_rev$D <- ifelse(data_high_rev$tom_week_id == "54"|data_high_rev$tom_week_id =="55", 1,0)
+data_normal_rev$D <- ifelse(data_normal_rev$tom_week_id == "54"|data_normal_rev$tom_week_id =="55", 1,0)
+
+# Run a regression discontinuity model with revenue on week released and the treatment
+rdd_model1_HR <- lm_robust(revenue ~  tom_week_id + D, data = data_high_rev)
+rdd_model1_NR <- lm_robust(revenue ~  tom_week_id + D, data = data_normal_rev)
+rdd_model1_HR <- lm_robust(revenue ~  tom_week_id + budget + population + D, data = data_high_rev)
+rdd_model1_NR <- lm_robust(revenue ~  tom_week_id + budget + population + D, data = data_normal_rev)
+summary(rdd_model1_HR)
+summary(rdd_model1_NR)
+
+rd_high <- ivreg(revenue ~ tom_week_id| D, data = data_high_rev)
+rd_norm <- ivreg(revenue ~ tom_week_id| D, data = data_normal_rev)
+
+summary(rd_high)
+summary(rd_norm)
+
+# Predict the values of the regression discontinuity model and plot them
+predicted_values_HR <- data_high_rev %>%
+  mutate(predicted_values = predict(rd_high))
+
+predicted_values_NR <- data_normal_rev %>%
+  mutate(predicted_values = predict(rd_norm))
+
+
+ggplot(predicted_values_HR, aes(x = tom_week_id, y = revenue)) +
+  geom_point() +
+  #geom_smooth(method = "lm", formula = y ~ x, se = FALSE, color = "red") +
+  geom_smooth(method = "lm", formula = y ~ x, se = FALSE, color = "blue", data = subset(data_high_rev, tom_week_id == "53"|tom_week_id == "54")) +
+  #geom_smooth(method = "lm", formula = y ~ x, se = FALSE, color = "green", data = subset(data_high_rev, tom_week_id == "54"|tom_week_id == "55")) +
+  labs(title = "Revenue by Week (High Revenue Movies)", x = "tom_week_id", y = "Revenue")
+
+ggplot(predicted_values_NR, aes(x = tom_week_id, y = revenue)) +
+  geom_point() +
+  #geom_smooth(method = "lm", formula = y ~ x, se = FALSE, color = "red") +
+  geom_smooth(method = "lm", formula = y ~ x, se = FALSE, color = "blue", data = subset(data_normal_rev, tom_week_id == "53"|tom_week_id == "54")) +
+  geom_smooth(method = "lm", formula = y ~ x, se = FALSE, color = "green", data = subset(data_normal_rev, tom_week_id == "54"|tom_week_id == "55")) +
+  labs(title = "Revenue by Week (Normal Revenue Movies)", x = "tom_week_id", y = "Revenue")
+
+```
+
+```
+
+
+
+
+
+
+
